--- a/packages/create-wagmi/templates/vite-react/package.json
+++ b/packages/create-wagmi/templates/vite-react/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "latest",
-    "wagmi": "latest"
+    "wagmi": "latest",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
@@ -22,7 +23,6 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
-    "buffer": "^6.0.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   }
